--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <h1>ARISTIDES B PONTES</h1>
 <h2>ANALISTA DE SISTEMAS</h2>
 
- <h2>Links para Cursos</h2>
+
+<h2>Meus-Projetos</h2>
+<ul class="lista-links">
+<li><a href="assets/projetos/portifolio/portifloio-abp.html" target="_blank">Meu Portifolio</a></li>
+<li><a href="assets/projetos/minha-ide.html" target="_blank">minha-ide</a></li>
+<li><a href="assets/projetos/minha-radio.html" target="_blank">minha-radio</a></li>
+<li><a href="assets/projetos/site-vendas.html" target="_blank">site-vendas</a></li>
+<li><a href="assets/projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
+<li><a href="assets/projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
+<li><a href="assets/projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
+<li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
+</ul>
+
+<h2>Links para Cursos</h2>
 <ul class="lista-links">
 <li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
 <li><a href="https://www.escolavirtual.gov.br/" target="_blank">escolavirtual.gov</a></li>
@@ -33,19 +46,6 @@
 <li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
 </ul>
 
-       
-
-<h2>Testes-Projetos</h2>
-<ul class="lista-links">
-<li><a href="assets/projetos/portifolio.html" target="_blank">portifolio</a></li>
-<li><a href="assets/projetos/minha-ide.html" target="_blank">minha-ide</a></li>
-<li><a href="assets/projetos/minha-radio.html" target="_blank">minha-radio</a></li>
-<li><a href="assets/projetos/site-vendas.html" target="_blank">site-vendas</a></li>
-<li><a href="assets/projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
-<li><a href="assets/projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
-<li><a href="assets/projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
-<li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
-</ul>
 
 
 <h2>Inteligência Artificial</h2> 
