--- a/index.html
+++ b/index.html
@@ -240,6 +240,6 @@
   </footer>
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/loja.js"></script>
+  <script src="assets/js/loja.js"></script>
 </body>
 </html>
