--- a/index.html
+++ b/index.html
@@ -2,244 +2,234 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AristidesBP - Portfólio & Loja</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="icon" type="image/png" href="icons/favicon.png">
- <link rel="stylesheet" href="assets/css/loja.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Formulário de briefing para criação de site com SEO completo.">
+  <meta name="robots" content="noindex, nofollow">
+  <title>Briefing para Criação de Site</title>
+  <style>
+    :root {
+      --primary: #0f9d58;
+      --accent: #1a73e8;
+      --bg: #121212;
+      --card: #1e1e1e;
+      --text: #f0f0f0;
+      --muted: #999;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--bg);
+      margin: 0;
+      padding: 0;
+      color: var(--text);
+    }
+
+    header {
+      background: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      height: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      text-align: center;
+    }
+
+    header::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+      z-index: 1;
+    }
+
+    header h1, header p {
+      position: relative;
+      z-index: 2;
+      color: white;
+      margin: 0;
+    }
+
+    header h1 {
+      font-size: 2rem;
+    }
+
+    header p {
+      color: #ccc;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: var(--card);
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 30px rgba(0,0,0,0.4);
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.4rem;
+    }
+
+    label {
+      font-weight: 600;
+      margin-bottom: 0.3rem;
+    }
+
+    input, textarea, select {
+      background: #2a2a2a;
+      color: var(--text);
+      border: 1px solid #444;
+      border-radius: 8px;
+      padding: 0.75rem;
+      font-size: 1rem;
+      width: 100%;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+
+    .color-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+    }
+
+    .color-option {
+      background: #fff;
+      border-radius: 8px;
+      padding: 0.4rem 0.8rem;
+      border: none;
+      cursor: pointer;
+      font-size: 0.9rem;
+      color: #000;
+    }
+
+    .color-option:hover {
+      opacity: 0.8;
+    }
+
+    button {
+      background: var(--accent);
+      color: white;
+      border: none;
+      padding: 1rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #155ec4;
+    }
+
+    .note {
+      background: #fff59d;
+      color: #333;
+      padding: 1rem;
+      border-radius: 8px;
+      font-weight: 500;
+      font-size: 0.95rem;
+    }
+  </style>
 </head>
+<body>
 
-
-
-
-
-<body class="bg-light">
-  <!-- CABEÇALHO -->
   <header>
-    <h1>AristidesBP - Portfólio</h1>
-    <p>Analista de Sistemas | Mentor de Programação | Desenvolvedor Full Stack</p>
+    <div>
+      <h1>Transformamos ideias em crescimento digital</h1>
+      <p>Preencha o formulário para começarmos seu projeto com SEO de alto impacto.</p>
+    </div>
   </header>
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-    <a class="navbar-brand" href="#">Minha Loja</a>
-    <div class="ms-auto d-flex align-items-center gap-2">
-      <button class="btn btn-outline-light position-relative" onclick="openCartModal()">Carrinho <span class="cart-count" id="cartCount">0</span></button>
-      <button class="btn btn-outline-info ms-2" onclick="openSobreModal()">Sobre</button>
-      <button class="btn btn-outline-light ms-2" onclick="openAdminLoginModal()">Admin</button>
-    </div>
-  </nav>
-  <!-- MODAL SOBRE -->
-  <div class="modal fade" id="sobreModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Sobre AristidesBP</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body text-center">
-          <img src="assets/img/logoAbp.jpg" alt="Logo AristidesBP" style="max-width: 180px; border-radius: 12px; margin-bottom: 1rem;">
-          <p style="margin-top:1rem">
-            Olá! Sou <strong>AristidesBP</strong>, Analista de Sistemas com experiência em desenvolvimento front-end e mobile usando AndroidIDE.
-            Atuo também como mentor de programação e gestor de tráfego pago.<br><br>
-            <b>Acredito que o código perfeito é o código comentado</b>, e tenho como missão ensinar, criar soluções práticas e entregar projetos de alta qualidade para meus clientes.
-          </p>
-        </div>
+
+  <main>
+    <form id="briefingForm">
+      <label>Nome da Empresa:</label>
+      <input type="text" name="empresa" required>
+
+      <label>Descrição Curta / Missão:</label>
+      <textarea name="descricao" required></textarea>
+
+      <label>Serviços Oferecidos:</label>
+      <textarea name="servicos" placeholder="Separe por vírgulas" required></textarea>
+
+      <label>Cidade e Estado:</label>
+      <input type="text" name="localizacao" required>
+
+      <label>Público-alvo:</label>
+      <textarea name="publico" required></textarea>
+
+      <label>Diferenciais da Empresa:</label>
+      <textarea name="diferenciais"></textarea>
+
+      <label>Redes Sociais (links):</label>
+      <textarea name="redes"></textarea>
+
+      <label>Nome do Responsável:</label>
+      <input type="text" name="responsavel" required>
+
+      <label>WhatsApp para Contato:</label>
+      <input type="text" name="whatsapp" required>
+
+      <label>E-mail para Contato:</label>
+      <input type="email" name="email" required>
+
+      <label>URL do Site Atual (se houver):</label>
+      <input type="url" name="site" value="http://">
+
+      <label>Objetivo principal do site:</label>
+      <textarea name="objetivo" required></textarea>
+
+      <label>Selecione uma paleta de cores desejada para o site:</label>
+      <div class="color-group">
+        <button type="button" class="color-option" onclick="setColor('Azul & Branco')">Azul & Branco</button>
+        <button type="button" class="color-option" onclick="setColor('Preto & Dourado')">Preto & Dourado</button>
+        <button type="button" class="color-option" onclick="setColor('Verde & Cinza')">Verde & Cinza</button>
+        <button type="button" class="color-option" onclick="setColor('Rosa & Roxo')">Rosa & Roxo</button>
       </div>
-    </div>
-  </div>
-  <!-- MODAL LOGIN ADMIN -->
-  <div class="modal fade" id="adminLoginModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="adminLoginForm" onsubmit="handleAdminLogin(event)">
-          <div class="modal-header">
-            <h5 class="modal-title">Login Administrativo</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="password" id="adminPassword" class="form-control" placeholder="Senha" required />
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Entrar</button>
-          </div>
-        </form>
+      <input type="text" name="paleta" id="paleta" placeholder="Ou digite uma combinação personalizada">
+
+      <div class="note">
+        📎 <strong>Observação:</strong> Caso tenha, envie imagens, vídeos, logotipo ou materiais de referência via WhatsApp após o envio deste formulário.
       </div>
-    </div>
-  </div>
-  <!-- MODAL PAINEL ADMIN -->
-  <div class="modal fade" id="adminPanelModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Painel Administrativo</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <h4 class="mt-4">Cadastrar Novo Produto ou Serviço</h4>
-          <form id="cadastroForm" class="mb-4">
-            <div class="mb-2"><input class="form-control" id="novoNome" placeholder="Nome do produto/serviço" required></div>
-            <div class="mb-2"><input type="number" class="form-control" id="novoPreco" placeholder="Preço (R$)" required></div>
-            <div class="mb-2">
-              <select class="form-select" id="novoTipo" required>
-                <option value="">Selecione o tipo</option>
-                <option value="produto">Produto</option>
-                <option value="servico">Serviço</option>
-              </select>
-            </div>
-            <div class="mb-2"><textarea class="form-control" id="novoDescricao" placeholder="Descrição"></textarea></div>
-            <div class="mb-2"><input class="form-control" id="novoFoto" placeholder="Endereço da foto (URL)"></div>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
-            <button class="btn btn-outline-primary mt-3" type="button" onclick="toggleView()">Visualizar Itens</button>
-            <button class="btn btn-success mt-3" type="button" onclick="baixarLoja()">Baixar Loja</button>
-            <div id="itensAdmin" class="mt-4"></div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- MODAL EDITAR ITEM -->
-  <div class="modal fade" id="editItemModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="editItemForm">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar Produto/Serviço</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="hidden" id="editItemId">
-            <div class="mb-2"><input class="form-control" id="editNome" placeholder="Nome do produto/serviço" required></div>
-            <div class="mb-2"><input type="number" class="form-control" id="editPreco" placeholder="Preço (R$)" required></div>
-            <div class="mb-2">
-              <select class="form-select" id="editTipo" required>
-                <option value="">Selecione o tipo</option>
-                <option value="produto">Produto</option>
-                <option value="servico">Serviço</option>
-              </select>
-            </div>
-            <div class="mb-2"><textarea class="form-control" id="editDescricao" placeholder="Descrição"></textarea></div>
-            <div class="mb-2"><input class="form-control" id="editFoto" placeholder="Endereço da foto (URL)"></div>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-success">Salvar Alterações</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- MODAL CARRINHO -->
-  <div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <form onsubmit="enviarPedido(event)">
-          <div class="modal-header">
-            <h5 class="modal-title">Seu Carrinho</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <ul class="list-group mb-3" id="cartItems"></ul>
-            <h5 id="totalPedido" class="mb-4">Total: R$ 0,00</h5>
-            <div class="mb-2"><input class="form-control" id="nome" placeholder="Nome completo" required></div>
-            <div class="mb-2"><input class="form-control" id="cpf" placeholder="CPF" required></div>
-            <div class="mb-2"><input class="form-control" id="telefone" placeholder="Telefone para contato" required></div>
-            <div class="mb-2"><input class="form-control" id="email" placeholder="E-mail" required></div>
-            <div class="mb-2"><input class="form-control" id="endereco" placeholder="Endereço completo" required></div>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-success">Enviar Pedido via WhatsApp</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- FILTRO E LISTA DE ITENS -->
-  <div class="container mt-4">
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <select class="form-select" id="filterCategory" onchange="filterItems()">
-          <option value="todos">Todas as Categorias</option>
-          <option value="produto">Produtos</option>
-          <option value="servico">Serviços</option>
-        </select>
-      </div>
-    </div>
-    <div class="row" id="itemContainer"></div>
-  </div>
-  <!-- SEÇÃO SERVIÇOS -->
-  <section>
-    <h2 class="titulo-secao">Serviços</h2>
-    <div class="servicos">
-      <div class="card-servico">
-        <h3>Desenvolvimento Web</h3>
-        <p>Criação de sites profissionais, landing pages e portfólios modernos com HTML, CSS, JavaScript e frameworks.</p>
-      </div>
-      <div class="card-servico">
-        <h3>Mentoria em Programação</h3>
-        <p>Aulas práticas e personalizadas para quem quer aprender lógica, front-end e boas práticas no desenvolvimento.</p>
-      </div>
-      <div class="card-servico">
-        <h3>Criação de Aplicativos</h3>
-        <p>Aplicativos móveis Android com interface moderna e uso de banco de dados local, ideal para negócios.</p>
-      </div>
-      <div class="card-servico">
-        <h3>Gestão de Tráfego Pago</h3>
-        <p>Criação de campanhas otimizadas no Google Ads e Meta Ads para atrair clientes e aumentar suas vendas.</p>
-      </div>
-    </div>
-  </section>
-  <!-- SEÇÃO SOBRE MIM -->
-  <section class="sobre-mim">
-    <h2 class="titulo-secao" style="color: white;">Sobre Mim</h2>
-    <p>
-      Olá! Sou <strong>AristidesBP</strong>, Analista de Sistemas com experiência em desenvolvimento front-end e mobile usando AndroidIDE. Atuo também como mentor de programação e gestor de tráfego pago. Acredito que o código perfeito é o código comentado, e tenho como missão ensinar, criar soluções práticas e entregar projetos de alta qualidade para meus clientes.
-    </p>
-  </section>
-  <!-- CAIXA FLUTUANTE DA RÁDIO E BOTÃO DE TEMA -->
-  <div id="radio-float">
-    <button id="theme-toggle" title="Alternar tema">🌓</button>
-    <button id="radio-float-toggle" title="Mostrar/Ocultar Rádio">🎵</button>
-    <div id="radio-float-content">
-      <audio id="hoverSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfae1b4.mp3" preload="auto"></audio>
-      <audio id="bgMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
-      <div class="music-controls-row">
-        <button id="bgMusicBtn" title="Play/Pause">🎵</button>
-        <button id="vol-down" title="Diminuir volume">➖</button>
-        <input id="vol-slider" type="range" min="0" max="1" step="0.01" value="0.2" aria-label="Volume">
-        <button id="vol-up" title="Aumentar volume">➕</button>
-      </div>
-      <div class="music-controls-row">
-        <select id="music-select" title="Escolha a trilha">
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3">Trilha 1</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3">Trilha 2</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3">Trilha 3</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-4.mp3">Trilha 4</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-5.mp3">Trilha 5</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-6.mp3">Trilha 6</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-7.mp3">Trilha 7</option>
-          <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3">Trilha 8</option>
-          <option value="https://cdn.pixabay.com/audio/2023/02/10/audio_12c6a1d6bb.mp3">Jazz Suave</option>
-          <option value="https://cdn.pixabay.com/audio/2022/12/19/audio_12f5e4b66b.mp3">Ambiental Chill</option>
-          <option value="https://cdn.pixabay.com/audio/2022/10/16/audio_12a8f0d3f4.mp3">Piano Relaxante</option>
-        </select>
-        <input type="checkbox" id="repeatMusic" style="accent-color:#007BFF;" title="Repetir faixa">
-        <label for="repeatMusic" title="Repetir faixa" style="font-size:1.05em;cursor:pointer;">🔁</label>
-      </div>
-      <div class="music-controls-row">
-        <span id="music-current">0:00</span>
-        <input id="music-progress" type="range" min="0" max="100" value="0" step="0.01" aria-label="Progresso da música">
-        <span id="music-duration">0:00</span>
-      </div>
-    </div>
-  </div>
-  <!-- RODAPÉ FIXO -->
-  <footer class="footer-final-fixed">
-    <p>&copy; 2016 Aristides Barbosa Pontes - Todos os direitos reservados.
-      <a href="#privacy-policy">Política de Privacidade</a>
-    </p>
-  </footer>
-  <!-- SCRIPTS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/loja.js"></script>
+
+      <button type="submit">Enviar via WhatsApp</button>
+    </form>
+  </main>
+
+  <script>
+    const form = document.getElementById('briefingForm');
+    const paletaInput = document.getElementById('paleta');
+
+    function setColor(cor) {
+      paletaInput.value = cor;
+    }
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      const entries = Array.from(data.entries());
+
+      const message = entries.map(([key, value]) => {
+        return `*${key.toUpperCase()}*:\n${value.trim()}\n`;
+      }).join('\n');
+
+      const phone = '5591992420981';
+      const url = `https://wa.me/${phone}?text=${encodeURIComponent("🚀 Briefing para Criação de Site\n\n" + message)}`;
+
+      window.open(url, '_blank');
+    });
+  </script>
 </body>
 </html>
