--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <meta name="description" content="Formulário de briefing para criação de site com SEO completo.">
   <meta name="robots" content="noindex, nofollow">
   <title>Briefing para Criação de Site</title>
+  
+  <hr style="margin-top: 2rem; border: none; border-top: 1px solid #444;">
+
+<h2 style="margin-top: 2rem; font-size: 1.2rem;">Informações para SEO</h2>
+
+<label>Título principal (até 60 caracteres):</label>
+<input type="text" name="seo_titulo" maxlength="60" value="Aristides B Pontes | Marketing, Tráfego & Sistemas" required>
+
+<label>Descrição da página (até 160 caracteres):</label>
+<textarea name="seo_descricao" maxlength="160" required>Consultor de Marketing, Programador e Especialista em Tráfego Pago. Criação de sites com SEO e soluções profissionais para empresas.</textarea>
+
+<label>Palavras-chave principais (separadas por vírgulas):</label>
+<input type="text" name="seo_keywords" value="Consultor de Marketing, Programação, Tráfego Pago, Criação de Sites, SEO, Programador, Analista de Sistemas, Landing Pages" required>
+
+<label>Concorrentes ou sites de referência:</label>
+<textarea name="seo_referencia">https://rockcontent.com, https://neilpatel.com, https://rdstation.com</textarea>
   <style>
     :root {
       --primary: #0f9d58;
