--- a/index.html
+++ b/index.html
@@ -247,5 +247,49 @@
       window.open(url, '_blank');
     });
   </script>
+
+  <!--
+  Crie uma página HTML moderna, responsiva e de carregamento rápido, com design escuro e elegante, voltada para captação de briefing de clientes interessados em criação de sites com SEO completo.
+
+A página deve conter:
+1. Um cabeçalho com uma **frase de impacto** e imagem de fundo demonstrando **crescimento empresarial**, com sobreposição escura e texto branco centralizado.
+2. Um formulário completo com campos para:
+   - Nome da empresa
+   - Descrição / Missão
+   - Serviços oferecidos
+   - Localização
+   - Público-alvo
+   - Diferenciais
+   - Redes sociais
+   - Nome do responsável
+   - WhatsApp
+   - E-mail
+   - URL do site atual (pré-preenchido com “http://”)
+   - Objetivo principal do site
+   - Informações para SEO (título, descrição, palavras-chave, referências)
+   - Seleção de paleta de cores (com botões de escolha rápida e campo personalizado)
+
+3. Estilo:
+   - Background preto (`#121212`)
+   - Cartões e formulário em cinza escuro (`#1e1e1e`)
+   - Textos claros (`#f0f0f0`)
+   - Botões coloridos com `hover`
+   - Paleta tipográfica moderna (Segoe UI ou similar)
+   - Detalhes em verde e azul como cores primárias
+
+4. Ao final do formulário:
+   - Uma caixa de aviso em **amarelo (#fff59d)** orientando o cliente a enviar imagens, logotipo ou vídeos via WhatsApp
+   - Botão de envio que formata todas as respostas e as envia diretamente para o número **+55 91 99242-0981** via **WhatsApp Web**
+
+5. A página não deve utilizar backend, apenas HTML, CSS e JavaScript puros.
+
+6. Instruções importantes:
+   - O formulário deve ser fácil de preencher e bem espaçado.
+   - Use classes reutilizáveis e variáveis CSS (`:root`) para facilitar personalização.
+   - O código deve ser todo em **uma única página** (sem dependências externas).
+   - Pode usar imagens do Unsplash no cabeçalho.
+
+Nome do criador: *Aristides B Pontes — Analista de Sistemas, Consultor de Marketing e Programador*
+  -->
 </body>
 </html>
