--- a/index.html
+++ b/index.html
@@ -247,16 +247,25 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 
 <h2>Meus-Projetos</h2>
 <ul class="lista-links">
-<li><a href="assets/projetos/portifolio/portifloio-abp1.html" target="_blank">Portifloio-AristidesBp</a></li>
-<li><a href="assets/projetos/minha-ide.html" target="_blank">minha-ide</a></li>
-<li><a href="assets/projetos/minha-radio.html" target="_blank">minha-radio</a></li>
-<li><a href="assets/projetos/site-vendas.html" target="_blank">site-vendas</a></li>
-<li><a href="assets/projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
-<li><a href="assets/projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
-<li><a href="assets/projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
+<li><a href="projetos/portifolio" target="_blank">Portifloio-AristidesBp</a></li>
+<li><a href="projetos/loja" target="_blank">loja</a></li>
+<li><a href="projetos/formularios" target="_blank">formularios</a></li>
+<li><a href="projetos/torre defencer" target="_blank">torre defencer</a></li>
+<li><a href="projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
+<li><a href="projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
+<li><a href="projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
 <li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
 </ul>
-
+  
+<h2>links de Redes-Sociais</h2> 
+<ul class="lista-links">
+<li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
+<li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+<li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
+<li><a href="https://www.twitter.com/" target="_blank">Twitter (X)</a></li>
+<li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+<li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
+</ul>
 <h2>Links para Cursos</h2>
 <ul class="lista-links">
 <li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
@@ -265,7 +274,6 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
 <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
 <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
-<li><a href="aulas-txt.html" target="_blank">MATERIAL.txt</a></li>
 </ul>
 
 <h2>likns para Empregos-Freelance</h2>
@@ -279,15 +287,7 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 
 
 
-<h2>links de Redes-Sociais</h2> 
-<ul class="lista-links">
-<li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
-<li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-<li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
-<li><a href="https://www.twitter.com/" target="_blank">Twitter (X)</a></li>
-<li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-<li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
-</ul>
+
 
 
 
