--- a/index.html
+++ b/index.html
@@ -259,12 +259,14 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
   
 <h2>links de Redes-Sociais</h2> 
 <ul class="lista-links">
-<li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
+<li><a href="http://github.com/aristidesbp/aristidesbp.github.io" target="_blank">GitHub</a></li>
+<li><a href="https://web.whatsapp.com/" target="_blank">whatsapp</a></li>
 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
 <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
 <li><a href="https://www.twitter.com/" target="_blank">Twitter (X)</a></li>
 <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
 <li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
+  
 </ul>
 <h2>Links para Cursos</h2>
 <ul class="lista-links">
