--- a/projetos/portifolio/index.html
+++ b/projetos/portifolio/index.html
@@ -57,7 +57,7 @@
 
 🧩 Este componente será chamado com o seguinte código no HTML:
 -->
-<header id="componente-Header" role="banner" aria-label="Cabeçalho principal">Carregando header...</header>
+<header id="componente-Header" role="banner" aria-label="Cabeçalho principal"></header>
 <script src="assets/header.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHeader);</script>
 
@@ -65,7 +65,7 @@
 
 
   <!-- 🧠 Prompt: Crie um componente de navbar fixo e responsivo, com botão hamburguer moderno, efeito sticky e sombra dourada. Deve conter navegação fluida e visual marcante em preto e dourado. Independente e reutilizável. -->
-  <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal">    Carregando navbar...  </nav>
+  <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal"></nav>
   <script src="assets/navbar.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarNavbar);</script>
 
@@ -74,7 +74,7 @@
 
 
   <!-- 🧠 Prompt: Crie um componente "hero" com chamada à ação forte, CTA chamativo e layout responsivo. Deve induzir o cliente a clicar e se interessar pelos serviços, usando fontes grandes e contraste forte. -->
-  <section id="componente-hero" aria-label="Chamada de ação principal">      Carregando hero...    </section>
+  <section id="componente-hero" aria-label="Chamada de ação principal"></section>
   <script src="assets/hero.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarHero);</script>
 
@@ -82,7 +82,7 @@
 
 
 <!-- 🧠 Prompt: Crie uma seção com cards de serviços com design elegante e botão “saiba mais” que expande a descrição. Os cards devem ser animados e ter aparência premium. Componente modular e independente. -->
-    <section id="componente-servicos" aria-label="Serviços oferecidos"> Carregando serviços...    </section>
+    <section id="componente-servicos" aria-label="Serviços oferecidos"></section>
    <script src="assets/servicos.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
 
@@ -93,14 +93,14 @@
 
 <!-- 🧠 Prompt: Crie uma seção "Sobre Mim" com layout responsivo, imagem de perfil, texto institucional e visual de confiança. Deve ter tipografia moderna, animações suaves e ser plugável em outras páginas. -->
 
-<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes">  Carregando sobre...</section>
+<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes"></section>
 <script src="assets/sobre.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
 
 
 
 <!-- 🧠 Prompt: Crie um slide de serviços em formato de carrossel moderno com imagens que representem os serviços oferecidos. Design limpo, responsivo, com animações suaves. Deve ser autônomo e plugável em outras páginas. -->
-<section id="componente-slide" aria-label="Apresentação visual de serviços">      Carregando slide...    </section>
+<section id="componente-slide" aria-label="Apresentação visual de serviços"></section>
 <script src="assets/slide.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSlide);</script>
 
