--- a/projetos/portifolio/index.html
+++ b/projetos/portifolio/index.html
@@ -106,7 +106,7 @@
 
 
 <!-- 🧠 Prompt: Crie um formulário completo para captação de leads, com checklist de serviços, campos de contato, validação e envio via WhatsApp. Layout profissional, responsivo e acessível. Independente e plugável. -->
-<section id="main-formularioContato" aria-label="Formulário de contato"> Carregando formulário... </section>
+<section id="main-formularioContato" aria-label="Formulário de contato"></section>
 <script src="assets/formularioContato.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarFormularioContato);</script>
 
@@ -116,7 +116,7 @@
 
 
   <!-- 🧠 Prompt: Crie um rodapé elegante com redes sociais, links institucionais e copyright. Estilo dark, com ícones modernos. Deve ser compacto no mobile e completo no desktop. Reutilizável e independente. -->
-  <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site"> Carregando footer...  </footer>
+  <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site"></footer>
 <script src="assets/footer.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarFooter);</script>
 
