--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Aristides Barbosa Pontes // Portfólio</title>
 
-  <!-- ✅ SEO para posicionamento no Google -->
+  <!-- ✅ SEO para posicionamento no Google (palavras chaves/keywords)-->
   <meta name="description" content="Sou Aristides Barbosa Pontes, desenvolvedor front-end e gestor de tráfego pago. Veja meu portfólio com projetos em HTML, CSS, JavaScript, AndroidIDE e estratégias de marketing digital.">
-  <meta name="author" content="Aristides Barbosa Pontes">
-  <meta name="keywords" content="portfólio, Aristides Barbosa Pontes, front-end, desenvolvedor, HTML, CSS, JavaScript, tráfego pago, marketing digital, programador web, projetos web, sites profissionais, developer, programação, dev, desenvolvedor, programador, html, css, javascript, nodejs, reactjs, react, github, frontend, front-end">
+  <meta name="author" content=" Aristides Barbosa Pontes - Portfólio ">
+  <meta name="keywords" content=" Portfólio profissional, Aristides Barbosa Pontes, Analista de Sistemas, desenvolvedor, front-end, Gestor de Tráfego, Tráfego pago, Marketing digital, programador web, Desenvolvimento web, sites profissionais, programador ">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://aristidesbp.github.io/" />
+  <link rel="canonical" href="https://aristidesbp.github.io/" /> 
+  
 
   <!-- ✅ Compartilhamento em redes sociais (Open Graph & Twitter Card) -->
   <meta property="og:type" content="website">
