--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Aristides Barbosa Pontes // Portfólio</title>
 
   <!-- ✅ SEO para posicionamento no Google (palavras chaves/keywords)-->
-  <meta name="description" content="Sou Aristides Barbosa Pontes, desenvolvedor front-end e gestor de tráfego pago. Veja meu portfólio com projetos em HTML, CSS, JavaScript, AndroidIDE e estratégias de marketing digital.">
+  <meta name="description" content="Sou Aristides Barbosa Pontes, desenvolvedor front-end e gestor de tráfego pago. Estratégias de marketing digital que funcionam.">
   <meta name="author" content=" Aristides Barbosa Pontes - Portfólio ">
   <meta name="keywords" content=" Portfólio profissional, Aristides Barbosa Pontes, Analista de Sistemas, desenvolvedor, front-end, Gestor de Tráfego, Tráfego pago, Marketing digital, programador web, Desenvolvimento web, sites profissionais, programador ">
   <meta name="robots" content="index, follow">
