--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-  <!-- 🔧 Scripts externos e principais -->
+  <!-- 🔧 Bibliotecas js externas e principais -->
   <!-- 🧠 Prompt: Importe bibliotecas modernas que melhorem animações e interação. Scripts devem ser carregados no final para performance. Use defer e async quando necessário. -->
   <script src="https://unpkg.com/scrollreveal" defer></script> <!-- Efeitos de scroll reveal -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer></script>
