--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <li><a href="projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
 <li><a href="projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
 <li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
+
+<li><a href="testevr.html" target="_blank">teste vr</a></li>
+<li><a href="projetos/loja" target="_blank">loja</a></li>
+  
 </ul>
   
 <h2>links de Redes-Sociais</h2> 
