--- a/index.html
+++ b/index.html
@@ -244,7 +244,15 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <h1>ARISTIDES B PONTES</h1>
 <h2>ANALISTA DE SISTEMAS</h2>
 
-
+<h2>Jogos AR/VR – WebXR (Gratuitos / Demonstração)</h2>
+<ul class="lista-links">
+  <li><a href="https://www.vrwebgames.com/" target="_blank">VR Web Games</a> – Jogos indie WebXR jogáveis no navegador do Meta Quest 3.</li>
+  <li><a href="https://itch.io/games/tag-webxr" target="_blank">Itch.io – WebXR</a> – Jogos AR/VR de desenvolvedores independentes.</li>
+  <li><a href="https://immersive-web.github.io/webxr-samples/" target="_blank">WebXR Samples</a> – Demonstrações técnicas de WebXR para explorar AR/VR.</li>
+  <li><a href="https://sidequestvr.com/apps/webxr" target="_blank">SideQuest WebXR</a> – Plataforma alternativa com demos e conteúdos WebXR.</li>
+  <li><a href="https://molecularwebxr.org" target="_blank">MolecularWebXR</a> – Experiência educacional colaborativa em AR/VR.</li>
+</ul>
+  
 <h2>Meus-Projetos</h2>
 <ul class="lista-links">
 <li><a href="projetos/portifolio" target="_blank">Portifloio-AristidesBp</a></li>
