--- a/index.html
+++ b/index.html
@@ -244,30 +244,24 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <h1>ARISTIDES B PONTES</h1>
 <h2>ANALISTA DE SISTEMAS</h2>
 
-<h2>Jogos AR/VR – WebXR (Gratuitos / Demonstração)</h2>
-<ul class="lista-links">
-  <li><a href="https://www.vrwebgames.com/" target="_blank">VR Web Games</a> – Jogos indie WebXR jogáveis no navegador do Meta Quest 3.</li>
-  <li><a href="https://itch.io/games/tag-webxr" target="_blank">Itch.io – WebXR</a> – Jogos AR/VR de desenvolvedores independentes.</li>
-  <li><a href="https://immersive-web.github.io/webxr-samples/" target="_blank">WebXR Samples</a> – Demonstrações técnicas de WebXR para explorar AR/VR.</li>
-  <li><a href="https://sidequestvr.com/apps/webxr" target="_blank">SideQuest WebXR</a> – Plataforma alternativa com demos e conteúdos WebXR.</li>
-  <li><a href="https://molecularwebxr.org" target="_blank">MolecularWebXR</a> – Experiência educacional colaborativa em AR/VR.</li>
-</ul>
+
   
 <h2>Meus-Projetos</h2>
 <ul class="lista-links">
-<li><a href="projetos/portifolio" target="_blank">Portifloio-AristidesBp</a></li>
-<li><a href="projetos/loja" target="_blank">loja</a></li>
-<li><a href="projetos/formularios" target="_blank">formularios</a></li>
-<li><a href="projetos/torre defencer" target="_blank">torre defencer</a></li>
-<li><a href="projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
-<li><a href="projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
-<li><a href="projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
-<li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
+<li><a href="projeto/portifolio" target="_blank">Portifloio-AristidesBp</a></li>
+<li><a href="projeto/romulo" target="_blank">RB Estrutura e Eventos </a></li>
+<li><a href="projeto/formularios" target="_blank">formularios</a></li>
+<li><a href="projeto/torre defencer" target="_blank">torre defencer</a></li>
+<li><a href="projeto/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
+<li><a href="projeto/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
+<li><a href="projeto/minhas-tarefas" target="_blank">ficha-tarefas</a></li>
+<li><a href="projeto/portifolio-interativo target="_blank">portifolio-interativo.html</a></li>
 
 <li><a href="testevr.html" target="_blank">teste vr</a></li>
 <li><a href="projetos/loja" target="_blank">loja</a></li>
   
 </ul>
+
   
 <h2>links de Redes-Sociais</h2> 
 <ul class="lista-links">
@@ -300,7 +294,14 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 </ul>
 
 
-
+<h2>Jogos AR/VR – WebXR (Gratuitos / Demonstração)</h2>
+<ul class="lista-links">
+  <li><a href="https://www.vrwebgames.com/" target="_blank">VR Web Games</a> – Jogos indie WebXR jogáveis no navegador do Meta Quest 3.</li>
+  <li><a href="https://itch.io/games/tag-webxr" target="_blank">Itch.io – WebXR</a> – Jogos AR/VR de desenvolvedores independentes.</li>
+  <li><a href="https://immersive-web.github.io/webxr-samples/" target="_blank">WebXR Samples</a> – Demonstrações técnicas de WebXR para explorar AR/VR.</li>
+  <li><a href="https://sidequestvr.com/apps/webxr" target="_blank">SideQuest WebXR</a> – Plataforma alternativa com demos e conteúdos WebXR.</li>
+  <li><a href="https://molecularwebxr.org" target="_blank">MolecularWebXR</a> – Experiência educacional colaborativa em AR/VR.</li>
+</ul>
 
 
 
