--- a/index.html
+++ b/index.html
@@ -250,15 +250,14 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <ul class="lista-links">
 <li><a href="projeto/portifolio" target="_blank">Portifloio-AristidesBp</a></li>
 <li><a href="projeto/romulo" target="_blank">RB Estrutura e Eventos </a></li>
-<li><a href="projeto/formularios" target="_blank">formularios</a></li>
-<li><a href="projeto/torre defencer" target="_blank">torre defencer</a></li>
-<li><a href="projeto/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
-<li><a href="projeto/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
-<li><a href="projeto/minhas-tarefas" target="_blank">ficha-tarefas</a></li>
-<li><a href="projeto/portifolio-interativo target="_blank">portifolio-interativo.html</a></li>
-
-<li><a href="testevr.html" target="_blank">teste vr</a></li>
+<li><a href="projeto/anaminesia" target="_blank">formulario de anaminesia</a></li>
+<li><a href="projeto/editortxt" target="_blank">Editor de Texto</a></li>
+<li><a href="projeto/tapioca" target="_blank">Cardapio Delivery tapiocaria</a></li>
 <li><a href="projetos/loja" target="_blank">loja</a></li>
+<li><a href="projeto/loja" target="_blank">Ficha-tarefas</a></li>
+<li><a href="projeto/portifolio-interativo target="_blank">portifolio-interativo.html</a></li>
+<li><a href="projeto/tarefas" target="_blank">Lista de Tarefas</a></li>
+<li><a href="projeto/entregas" target="_blank">Rotas de Entrega</a></li>
   
 </ul>
 
