--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@ body.dark input[type="range"] { accent-color: #00BFFF; }
 <li><a href="projeto/portifolio-interativo target="_blank">portifolio-interativo.html</a></li>
 <li><a href="projeto/tarefas" target="_blank">Lista de Tarefas</a></li>
 <li><a href="projeto/entregas" target="_blank">Rotas de Entrega</a></li>
-  
+<li><a href="projeto/vr/" target="_blank">Vr</a></li>
+    
 </ul>
 
   
