--- a/projeto/romulo/index.html
+++ b/projeto/romulo/index.html
@@ -11,13 +11,53 @@
   gtag('config', 'AW-828722967');
 </script>
   
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RB Estruturas e Eventos</title>
 
-  <!-- Importa a fonte Montserrat do Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+  <!-- ✅ Estrutura básica e SEO -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>RB Estruturas e Eventos – Locação de Estruturas</title>
+  <meta name="description" content="RB Estruturas e Eventos: Locação de palcos, tendas, arquibancadas, banheiros químicos e telão de LED para todos os tipos de eventos. Montagem e desmontagem inclusa!">
+  <meta name="keywords" content="locação de estruturas, aluguel de palcos, aluguel de tendas, locação de arquibancadas, aluguel de banheiros químicos, telão de LED, montagem e desmontagem de palcos, aluguel para eventos, estrutura para festas">
+  <meta name="author" content="RB Estruturas e Eventos">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://aristidesbp.github.io/projeto/romulo/">
 
+  <!-- ✅ Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="RB Estruturas e Eventos – Locação de Estruturas para Eventos">
+  <meta property="og:description" content="Locação de palcos, tendas, arquibancadas, banheiros químicos e telão de LED. Montagem e desmontagem inclusa!">
+  <meta property="og:url" content="https://aristidesbp.github.io/projeto/romulo/">
+  <meta property="og:image" content="https://aristidesbp.github.io/projeto/romulo/img/og-image.jpg">
+  <meta property="og:site_name" content="RB Estruturas e Eventos">
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:locale:alternate" content="en_US">
+  <meta property="og:image:alt" content="Estruturas para eventos – palcos, tendas e telão de LED">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="RB Estruturas e Eventos – Locação de Estruturas">
+  <meta name="twitter:description" content="Alugue palcos, tendas, arquibancadas, banheiros químicos e telão de LED para seu evento. Montagem e desmontagem inclusa!">
+  <meta name="twitter:image" content="https://aristidesbp.github.io/projeto/romulo/img/og-image.jpg">
+  <meta name="twitter:site" content="@RBestruturas">
+  <meta name="twitter:creator" content="@RBestruturas">
+
+  <!-- ✅ PWA & Favicon -->
+  <link rel="manifest" href="json/site-mvc-manifest.json">
+  <link rel="icon" href="icons/favicon.png" type="image/x-icon"/>
+
+  <!-- ✅ Fonts & CSS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+
+
+  
   <style>
     /* ===== VARIÁVEIS DE CORES ===== */
     :root {
