--- a/projeto/romulo/index.html
+++ b/projeto/romulo/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-828722967"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'AW-828722967');
-</script>
-  
 
   <!-- ✅ Estrutura básica e SEO -->
   <meta charset="UTF-8">
@@ -56,7 +47,16 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-828722967">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-828722967');
+</script>
   
   <style>
     /* ===== VARIÁVEIS DE CORES ===== */
