Change redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Redirecionando...</title>
 
     <!-- Redirecionamento automático -->
-    <meta http-equiv="refresh" content="0; url=projeto/meu_portifolio/Index.html">
+    <meta http-equiv="refresh" content="0; url=projeto/bloco_de_notas">
 
     <!-- Redirecionamento via JavaScript (garantia extra) -->
     <script>
