Update redirection to bloco_de_notas

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
     <!-- Redirecionamento via JavaScript (garantia extra) -->
     <script>
-        window.location.href = "projeto/meu_portifolio/Index.html";
+        window.location.href = "projeto/bloco_de_notas";
     </script>
 </head>
 <body>
-    <p>Redirecionando para o portfólio...</p>
+   
 
     <!-- Link de fallback -->
     <p>
         Se não for redirecionado automaticamente, 
-        <a href="projeto/meu_portifolio/Index.html">clique aqui</a>.
+        <a href="projeto/bloco_de_notas">clique aqui</a>.
     </p>
 </body>
 </html>
