--- a/index.html
+++ b/index.html
@@ -1,24 +1,107 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Redirecionando...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio - Aristides</title>
+    <style>
+        :root {
+            --bg: #0f172a;
+            --card-bg: #1e293b;
+            --text: #f8fafc;
+            --accent: #3ecf8e; /* Cor do Supabase */
+        }
 
-    <!-- Redirecionamento automático -->
-    <meta http-equiv="refresh" content="0; url=projeto/bloco_de_notas">
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--bg);
+            color: var(--text);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+        }
 
-    <!-- Redirecionamento via JavaScript (garantia extra) -->
-    <script>
-        window.location.href = "projeto/bloco_de_notas";
-    </script>
+        header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            width: 90%;
+            max-width: 800px;
+        }
+
+        .card {
+            background: var(--card-bg);
+            padding: 2rem;
+            border-radius: 12px;
+            text-align: center;
+            border: 1px solid #334155;
+            transition: transform 0.3s ease, border-color 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            border-color: var(--accent);
+        }
+
+        .card i {
+            font-size: 3rem;
+            display: block;
+            margin-bottom: 1rem;
+        }
+
+        .card h2 {
+            margin: 0 0 10px 0;
+            color: var(--accent);
+        }
+
+        .card p {
+            font-size: 0.9rem;
+            color: #94a3b8;
+        }
+
+        .btn {
+            margin-top: 15px;
+            display: inline-block;
+            background: var(--accent);
+            color: #000;
+            padding: 8px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-   
 
-    <!-- Link de fallback -->
-    <p>
-        Se não for redirecionado automaticamente, 
-        <a href="projeto/bloco_de_notas">clique aqui</a>.
-    </p>
+    <header>
+        <h1>Meus Projetos</h1>
+        <p>Bem-vindo ao hub do Aristides</p>
+    </header>
+
+    <div class="project-grid">
+        <a href="projeto/bloco_de_notas/index.html" class="card">
+            <i>📝</i>
+            <h2>Bloco de Notas</h2>
+            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
+            <span class="btn">Acessar App</span>
+        </a>
+
+        </div>
+
 </body>
 </html>
