Update title in index.html for Notepad section

--- a/projeto/bloco_de_notas/index.html
+++ b/projeto/bloco_de_notas/index.html
@@ -111,7 +111,7 @@
 <div class="login-card">
     <button id="btn-back" class="btn-back" onclick="toggleMode()">← Voltar para o Login</button>
     
-    <h1>SISTEMA ERP ABP</h1>
+    <h1>SISTEMA ERP ABP - BLOCO DE NOTAS</h1>
     <h2 id="form-subtitle">Faça login para acessar suas notas</h2>
 
     <div class="input-container" id="email-group">
