Update project link from bloco_de_notas to erp

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!-- ################################################################################# -->
 <!-- ################################################################################# -->
     <div class="project-grid">
-        <a href="projeto/bloco_de_notas/index.html" class="card">
+        <a href="projeto/erp/index.html" class="card">
             <i>📝</i>
             <h2>SISTEMA ERP ABP</h2>
             <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
